--- a/category.html
+++ b/category.html
@@ -175,14 +175,13 @@
           <button class="text-xl">
             <i class="fa-regular fa-user text-xl cursor-pointer"></i>
           </button>
-          <button class="relative text-xl">
+          <button class="text-xl relative" onclick="window.location.href='basket.html'">
             <i class="fa-solid fa-bag-shopping text-2xl cursor-pointer"></i>
-            <span
-              class="absolute -top-2 -right-2 bg-red-600 text-white text-xs w-5 h-5 rounded-full flex items-center justify-center font-bold glowing-pulse">
-              3
+            <span id="basket-count-mobile"
+              class="hidden absolute -top-2 -right-2 bg-red-600 text-white text-xs w-5 h-5 rounded-full flex items-center justify-center font-bold glowing-pulse">
+              0
             </span>
           </button>
-
         </div>
       </div>
       <div class="relative mb-2">
