--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
           Axtarış
         </a>
 
-        <a href="#" class="flex flex-col items-center hover:text-blue-600">
+        <a href="basket.html" class="flex flex-col items-center hover:text-blue-600">
           <i class="fa-solid fa-bag-shopping text-[24px] mb-[4px]"></i>
           Səbət
         </a>
