--- a/details.html
+++ b/details.html
@@ -39,7 +39,7 @@
         <div class="flex items-center gap-4 text-[16px]">
           <div class="flex items-center gap-1 cursor-pointer">AZ <i class="fa-solid fa-chevron-down"></i></div>
           <div
-            class="flex items-center gap-2 bg-gray-100 px-4 py-2 rounded-full cursor-pointer text-[#1e293b] font-bold">
+            class="flex items-center gap-2  px-4 py-2 rounded-full cursor-pointer text-[#1e293b] font-bold">
             <span class="text-lg"><i class="fa-regular fa-user text-xl"></i></span> Hesabım<i
               class="fa-solid fa-chevron-down"></i>
           </div>
@@ -146,7 +146,7 @@
           <ul class="flex gap-6 text-[#334155] font-semibold">
             <li><a href="#">Bestseller</a></li>
             <li><a href="#">Endirimlər</a></li>
-            <li><a href="#">Müəlliflər</a></li>
+            <li><a href="author.html">Müəlliflər</a></li>
             <li><a href="category.html">Klassiklər</a></li>
           </ul>
         </div>
@@ -219,7 +219,7 @@
             <div id="main-links">
               <a href="#" class="block p-[15px_0_5px]">Bestseller</a>
               <a href="#" class="block p-[5px_0]">Endirimlər</a>
-              <a href="#" class="block p-[5px_0]">Müəlliflər</a>
+              <a href="author.html" class="block p-[5px_0]">Müəlliflər</a>
               <a href="category.html" class="block p-[5px_0]">Klassiklər</a>
             </div>
           </div>
