--- a/author.html
+++ b/author.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="bg-gray-50 text-gray-800">
+<body>
   <header class="w-full">
     <div class="hidden lg:block">
       <div class="max-w-[1500px] mx-auto flex items-center justify-between px-4 gap-2 h-[120px]">
