--- a/author.html
+++ b/author.html
@@ -300,7 +300,7 @@
             <span>Müəlliflər</span>
         </div>
         <h1 class="text-[28px] font-bold mb-6 text-left">Müəlliflər</h1>
-        <div id="authors-list" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 gap-6"></div>
+        <div id="authors-list" class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-5 xl:grid-cols-6 gap-6 pb-[100px]"></div>
 
         <script src="js/author.js" type="module"></script>
     </div>
