--- a/index.html
+++ b/index.html
@@ -187,9 +187,9 @@
         </div>
       </div>
       <div class="relative mb-2">
-        <input type="text" placeholder="Növbəti kitabınızı axtarın"
+        <input id="mobileSearchInput" type="text" placeholder="Növbəti kitabınızı axtarın"
           class="w-full rounded-full border border-gray-300 px-4 py-2 text-sm bg-gray-50 focus:outline-none focus:ring-2 focus:ring-red-400" />
-        <span class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500 text-xl">
+        <span  class="absolute right-3 top-1/2 transform -translate-y-1/2 text-gray-500 text-xl">
           <i class="fa-solid fa-magnifying-glass"></i>
         </span>
       </div>
